5.kubernetes-network/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: gb4
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
