5.kubernetes-network/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: gb4 
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
