5.kubernetes-network/redmine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine
  namespace: gb4
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:
    http:
      paths:      
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redmine
            port:
              number: 80
